--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </div><!-- End Stats Item -->
 
             </div>
-
+            <a href="#puisi" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100"><i class="fab fa-readme"></i> Puisi IST</a>
           </div>
 
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
@@ -116,6 +116,113 @@
 
     </section><!-- /Hero Section -->
 
+    <section id="puisi" class="section" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
+        <div class="card">
+          <div class="card-header bg-primary text-light">
+            INSAN STATISTIK TELADAN
+          </div>
+          <div class="card-body">
+            <table class="table table-borderless" style="width: auto !important;">
+              <tbody>
+                <tr>
+                  <td class="text-primary fw-bold">[I]</td>
+                  <td>Indonesia Emas 2045 jadi visi</td>
+                </tr>
+                <tr>
+                  <td class="text-primary fw-bold">[N]</td>
+                  <td>Negeri makin berdaya di berbagai sisi</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[S]</td>
+                  <td>Seluruh pihak menaruh percaya</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[A]</td>
+                  <td>Akan kedigdayaan bumi nusantara</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[N]</td>
+                  <td>Negeri gemah ripah loh jinawi, bumi pertiwi tercinta</td>
+              </tr>
+              <tr>
+                  <td></td>
+                  <td></td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[S]</td>
+                  <td>Semangat bertumbuh dari segala sumber daya</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[T]</td>
+                  <td>Transformasi tak henti dalam berbagai upaya</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[A]</td>
+                  <td>Aksi profesional mewujud dalam karya nyata</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[T]</td>
+                  <td>Tak gentar hadapi segala tantangan di hadapan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[I]</td>
+                  <td>Insan BPS &#39;kan selalu jadi garda terdepan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[S]</td>
+                  <td>Statistik berkualitas terus diwujudkan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[T]</td>
+                  <td>Teladan di setiap lini kehidupan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[I]</td>
+                  <td>Inovator dan motor penggerak aneka perubahan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[K]</td>
+                  <td>Kolaborasi dengan mempersembahkan sebaik-baik pelayanan</td>
+              </tr>
+              <tr>
+                  <td></td>
+                  <td></td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[T]</td>
+                  <td>Terus melangkah dengan keyakinan penuh</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[E]</td>
+                  <td>Enggan berkeluh meski raga bersimbah peluh</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[L]</td>
+                  <td>Laku teladan sarat keberanian dan kejujuran</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[A]</td>
+                  <td>Asas nilai &quot;Ber-AKHLAK&quot; terus diinternalisasikan</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[D]</td>
+                  <td>Data berkualitas untuk wujudkan Indonesia Emas</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[A]</td>
+                  <td>Akan terwujud dari sinergi dan kolaborasi cerdas</td>
+              </tr>
+              <tr>
+                  <td class="text-primary fw-bold">[N]</td>
+                  <td>Nyata hadirmu membawa secercah harapan, duhai kawan-kawan Insan Statistik Teladan🤗🙏</td>
+              </tr>
+              </tbody>
+            </table>            
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Featured Services Section -->
     <section id="featured-services" class="featured-services section">
 
