--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
               </div><!-- End Stats Item -->
 
             </div>
-            <a href="#puisi" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100"><i class="fab fa-readme"></i> Puisi IST</a>
+            <a href="#puisi" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100"><i
+                class="fab fa-readme"></i> Puisi IST</a>
           </div>
 
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
@@ -132,93 +133,93 @@
                 <tr>
                   <td class="text-primary fw-bold">[N]</td>
                   <td>Negeri makin berdaya di berbagai sisi</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[S]</td>
                   <td>Seluruh pihak menaruh percaya</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[A]</td>
                   <td>Akan kedigdayaan bumi nusantara</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[N]</td>
                   <td>Negeri gemah ripah loh jinawi, bumi pertiwi tercinta</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td></td>
                   <td></td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[S]</td>
                   <td>Semangat bertumbuh dari segala sumber daya</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[T]</td>
                   <td>Transformasi tak henti dalam berbagai upaya</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[A]</td>
                   <td>Aksi profesional mewujud dalam karya nyata</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[T]</td>
                   <td>Tak gentar hadapi segala tantangan di hadapan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[I]</td>
                   <td>Insan BPS &#39;kan selalu jadi garda terdepan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[S]</td>
                   <td>Statistik berkualitas terus diwujudkan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[T]</td>
                   <td>Teladan di setiap lini kehidupan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[I]</td>
                   <td>Inovator dan motor penggerak aneka perubahan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[K]</td>
                   <td>Kolaborasi dengan mempersembahkan sebaik-baik pelayanan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td></td>
                   <td></td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[T]</td>
                   <td>Terus melangkah dengan keyakinan penuh</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[E]</td>
                   <td>Enggan berkeluh meski raga bersimbah peluh</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[L]</td>
                   <td>Laku teladan sarat keberanian dan kejujuran</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[A]</td>
                   <td>Asas nilai &quot;Ber-AKHLAK&quot; terus diinternalisasikan</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[D]</td>
                   <td>Data berkualitas untuk wujudkan Indonesia Emas</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[A]</td>
                   <td>Akan terwujud dari sinergi dan kolaborasi cerdas</td>
-              </tr>
-              <tr>
+                </tr>
+                <tr>
                   <td class="text-primary fw-bold">[N]</td>
                   <td>Nyata hadirmu membawa secercah harapan, duhai kawan-kawan Insan Statistik Teladan🤗🙏</td>
-              </tr>
+                </tr>
               </tbody>
-            </table>            
+            </table>
           </div>
         </div>
       </div>
@@ -1121,81 +1122,58 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Our Services<br></span>
-        <h2>Our ServiceS</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <span>Gallery<br></span>
+        <h2>Gallery</h2>
+        <p>Gallery Kenangan Penganugerahan IST 2024</p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-1.jpg" alt="" class="img-fluid">
-              </div>
-              <h3>Storage</h3>
-              <p>Cumque eos in qui numquam. Aut aspernatur perferendis sed atque quia voluptas quisquam repellendus
-                temporibus itaqueofficiis odit</p>
+          <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
             </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-2.jpg" alt="" class="img-fluid">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
               </div>
-              <h3><a href="#" class="stretched-link">Logistics</a></h3>
-              <p>Asperiores provident dolor accusamus pariatur dolore nam id audantium ut et iure incidunt molestiae
-                dolor ipsam ducimus occaecati nisi</p>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-3.jpg" alt="" class="img-fluid">
+              <div class="carousel-item">
+                <img src="assets/gallery/2.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
               </div>
-              <h3><a href="#" class="stretched-link">Cargo</a></h3>
-              <p>Dicta quam similique quia architecto eos nisi aut ratione aut ipsum reiciendis sit doloremque oluptatem
-                aut et molestiae ut et nihil</p>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-4.jpg" alt="" class="img-fluid">
+              <div class="carousel-item">
+                <img src="assets/gallery/3.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
               </div>
-              <h3><a href="#" class="stretched-link">Trucking</a></h3>
-              <p>Dicta quam similique quia architecto eos nisi aut ratione aut ipsum reiciendis sit doloremque oluptatem
-                aut et molestiae ut et nihil</p>
             </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-5.jpg" alt="" class="img-fluid">
-              </div>
-              <h3>Packaging</h3>
-              <p>Illo consequuntur quisquam delectus praesentium modi dignissimos facere vel cum onsequuntur maiores
-                beatae consequatur magni voluptates</p>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/service-6.jpg" alt="" class="img-fluid">
-              </div>
-              <h3><a href="#" class="stretched-link">Warehousing</a></h3>
-              <p>Quas assumenda non occaecati molestiae. In aut earum sed natus eatae in vero. Ab modi quisquam aut
-                nostrum unde et qui est non quo nulla</p>
-            </div>
-          </div><!-- End Card Item -->
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
 
       </div>
