--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#featured-services">Portofolio</a></li>
-          <li><a href="#about">Rencana Aksi</a></li>
-          <li><a href="#features">Video IST</a></li>
-          <li><a href="#services">Gallery</a></li>
+          <li><a href="#ist">Para IST</a></li>
+          <li><a href="#renaksi">Rencana Aksi</a></li>
+          <li><a href="#vpromosi">Video IST</a></li>
+          <li><a href="#gallery">Gallery</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -117,7 +117,14 @@
 
     </section><!-- /Hero Section -->
 
-    <section id="puisi" class="section" data-aos="fade-up" data-aos-delay="100">
+    <section id="puisi" class="featured-services section" data-aos="fade-up" data-aos-delay="100">
+      <div class="container section-title" data-aos="fade-up">
+        <span>PUISI IST</span>
+        <h2>PUISI IST</h2>
+        <p>
+          Karya: Etika Suryandari, IST Provinsi Sumatera Selatan
+        </p>
+      </div><!-- End Section Title -->
       <div class="container">
         <div class="card">
           <div class="card-header bg-primary text-light">
@@ -225,8 +232,14 @@
       </div>
     </section>
     <!-- Featured Services Section -->
-    <section id="featured-services" class="featured-services section">
-
+    <section id="ist" class="featured-services section">
+      <div class="container section-title" data-aos="fade-up">
+        <span>PARA IST</span>
+        <h2>PARA IST</h2>
+        <p>
+          Pemilihan IST setiap tahun terdiri dari tiga tahap:
+        </p>
+      </div><!-- End Section Title -->
       <div class="container">
         <div class="row gy-4">
 
@@ -489,8 +502,16 @@
     </section><!-- /Featured Services Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
-
+    <section id="renaksi" class="about section">
+      <div class="container section-title" data-aos="fade-up">
+        <span>RENCANA AKSI IST</span>
+        <h2>RENCANA AKSI IST</h2>
+        <p>
+          Setiap Insan Statistik Teladan memiliki Rencana Aksi yang akan dikerjakan dalam periode 6 bulan. Rencana
+          Aksi dipaparkan pada penjurian Tahap 2 dan Tahap 3. Berikut adalah rencana-rencana aksi para IST pada
+          Tahap 3:
+        </p>
+      </div><!-- End Section Title -->
       <div class="container">
 
         <div class="row gy-4">
@@ -502,12 +523,8 @@
           </div> -->
 
           <div class="col-lg-12 content order-last  order-lg-first" data-aos="fade-up" data-aos-delay="100">
-            <h3>Rencana Aksi</h3>
-            <p>
-              Setiap Insan Statistik Teladan memiliki Rencana Aksi yang akan dikerjakan dalam periode 6 bulan. Rencana
-              Aksi dipaparkan pada penjurian Tahap 2 dan Tahap 3. Berikut adalah rencana-rencana aksi para IST pada
-              Tahap 3:
-            </p>
+            <!-- <h3>Rencana Aksi</h3> -->
+
             <ul data-aos="fade-up" data-aos-delay="100">
               <li>
                 <i>1</i>
@@ -848,7 +865,7 @@
     </section><!-- /About Section -->
 
     <!-- Features Section -->
-    <section id="features" class="features about section">
+    <section id="vpromosi" class="features about section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -1118,7 +1135,7 @@
     </section><!-- /Features Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section">
+    <section id="gallery" class="services section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -1130,8 +1147,10 @@
       <div class="container">
 
         <div class="row gy-4">
+          <div class="col-lg-2">
 
-          <div id="carouselExampleCaptions" class="carousel slide">
+          </div>
+          <div id="carouselExampleCaptions" class="carousel slide col-lg-8">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -1144,22 +1163,25 @@
               <div class="carousel-item active">
                 <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
+                  <br />
+                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="assets/gallery/2.jpeg" class="d-block w-100" alt="...">
+                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
+                  <br />
+                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="assets/gallery/3.jpeg" class="d-block w-100" alt="...">
+                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
+                  <br />
+                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
                 </div>
               </div>
             </div>
@@ -1173,6 +1195,9 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+          <div class="col-lg-2">
+            
           </div>
         </div>
 
