--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,8 @@
                 aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+              <!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button> -->
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -1169,21 +1169,21 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
+                <img src="assets/gallery/2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
                   <br />
                   <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
                 </div>
               </div>
-              <div class="carousel-item">
+              <!-- <div class="carousel-item">
                 <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
                   <br />
                   <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
                 </div>
-              </div>
+              </div> -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
               data-bs-slide="prev">
