--- a/index.html
+++ b/index.html
@@ -1147,64 +1147,73 @@
       <div class="container">
 
         <div class="row gy-4">
-          <div class="col-lg-2">
 
-          </div>
-          <div id="carouselExampleCaptions" class="carousel slide col-lg-8">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button> -->
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
-                  <br />
-                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
-                </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/1.jpg" alt="" class="img-fluid">
               </div>
-              <div class="carousel-item">
-                <img src="assets/gallery/2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
-                  <br />
-                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
-                </div>
-              </div>
-              <!-- <div class="carousel-item">
-                <img src="assets/gallery/1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5 class="btn btn-primary">Hari 1 - Leadership Bootcamp</h5>
-                  <br />
-                  <p class="btn btn-sm btn-dark">Capacity building membangun kepemimpinan.</p>
-                </div>
-              </div> -->
+              <h3>Hari 1 - Leadership Bootcamp</h3>
+              <p>Capacity building membangun kepemimpinan.</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <div class="col-lg-2">
-            
-          </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/2.jpg" alt="" class="img-fluid">
+              </div>
+              <h3>Hari 1 - Leadership Bootcamp</h3>
+              <p>Para IST dibekali mengenai Ambidextrous Leadership.</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/3.jpeg" alt="" class="img-fluid">
+              </div>
+              <h3>Hari 2 - Capacity Building</h3>
+              <p>Para IST dibekali Capacity Building dan Sharing mengenai: Kepempinan Statistik, Public Speaking dan Kepenulisan.</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/4.jpeg" alt="" class="img-fluid">
+              </div>
+              <h3>Hari 3 - Penganugerahan IST</h3>
+              <p>Pengukuhan Gelar seluruh IST</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/5.JPG" alt="" class="img-fluid">
+              </div>
+              <h3>Hari 3 - Penganugerahan IST</h3>
+              <p>Pengumuman IST Nasional (Juara 1, 2 dan 3)</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/gallery/6.jpeg" alt="" class="img-fluid">
+              </div>
+              <h3>Hari 3 - Pelepasan dan Ramah-tamah IST</h3>
+              <p>Pelepasan IST bersama pimpinan dan pertunjukan dari para IST</p>
+            </div>
+          </div><!-- End Card Item -->
+
         </div>
 
       </div>
 
     </section><!-- /Services Section -->
-
+  
   </main>
 
   <footer id="footer" class="footer dark-background">
