final update, bismillah

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://drive.bps.go.id/s/N7tTtMXiEsq4Zzcgit" target="_blank">Rumah Ide</a>
+      <a class="btn-getstarted" href="https://drive.bps.go.id/s/N7tTtMXiEsq4Zzc" target="_blank">Rumah Ide</a>
 
     </div>
   </header>
